# image_caption_generator_using_gemini

./: .env  pyproject.toml
src/gemini_practice/: __init__.py  app.py
